# Dark

./: CMakeLists.txt  CMakeLists_minimal.txt  DEMO_README.md  DEPLOYMENT.md  README.md
assets/dialogue/: village_elder.json
build-demo/: CMakeCache.txt  Makefile  cmake_install.cmake
build-test/: CMakeCache.txt  GraphicsCoreTest  GraphicsStructureTest  Makefile  ScriptingMinimalTest  UIFrameworkSimpleTest  UIGameSpecificTest  cmake_install.cmake
cmake/: MacOSXBundleInfo.plist.in  Platform.cmake
config/: game_config.json
demo_saves/: autosave.sav  autosave.sav.bak1  current_state.sav  current_state.sav.bak1  current_state.sav.bak2  demo_basic.sav  slot_0.sav  slot_1.sav  slot_2.sav  slot_3.sav  slot_4.sav
deploy/rpg-engine-macos/: CMakeCache.txt  DEPLOYMENT.md  Makefile  README.md  run_demo.sh
deploy/rpg-engine-macos/SaveSystemDemo.app/Contents/: Info.plist
examples/: animation_integration_test.cpp  animation_test.cpp  audio_engine_test.cpp  audio_test.cpp  camera_test.cpp  character_stats_test  character_stats_test.cpp  collision_test.cpp  combat_integration_test.cpp  combat_test.cpp  component_test.cpp  config_simple_test.cpp  config_test.cpp  content_creation_tools_test.cpp  cross_platform_test.cpp  debug_systems_minimal_test.cpp  debug_systems_simple_test.cpp  debug_systems_test.cpp  dialogue_test.cpp  dialogue_ui_integration_example  dialogue_ui_integration_example.cpp  dialogue_ui_simple_test  dialogue_ui_simple_test.cpp  dialogue_ui_test.cpp  engine_save_integration_example.cpp  enhanced_test.cpp  entity_templates.json  entity_test.cpp  game_config.json  game_integration_test.cpp  graphics_core_test.cpp  graphics_minimal_test.cpp  graphics_structure_test.cpp  graphics_test.cpp  input_test.cpp  inventory_test  inventory_test.cpp  main.cpp  map_loading_test.cpp  movement_test.cpp  (+27 more)
scripts/: build_all_platforms.sh  deploy.sh  enhanced_deploy.sh  enhanced_test_cross_platform.sh  simple_cross_platform_test.sh  test_cross_platform.sh  test_platform_compatibility.sh
src/audio/: AudioManager.cpp  AudioManager.h  IAudioDevice.h  MockAudioDevice.cpp  MockAudioDevice.h  MusicManager.cpp  MusicManager.h  SoundEffectManager.cpp  SoundEffectManager.h
src/components/: AnimationComponent.cpp  AnimationComponent.h  CombatComponent.cpp  CombatComponent.h  Component.h  ComponentManager.cpp  ComponentManager.h  DialogueComponent.cpp  DialogueComponent.h  IComponent.h  InventoryComponent.cpp  InventoryComponent.h  PhysicsComponent.h  QuestComponent.cpp  QuestComponent.h  ScriptComponent.cpp  ScriptComponent.h  SpriteComponent.h  StatsComponent.cpp  StatsComponent.h  TransformComponent.h
src/core/: ConfigurationManager.cpp  ConfigurationManager.h  Engine.h  EngineConfig.cpp  EngineConfig.h  EngineCore.cpp  EngineCore.h  Event.cpp  Event.h  IEngine.h  ISystem.h  MemoryPool.cpp  MemoryPool.h  ThreadPool.cpp  ThreadPool.h  Types.h
src/debug/: DebugRenderer.cpp  DebugRenderer.h  EntityInspector.cpp  EntityInspector.h  PerformanceProfiler.cpp  PerformanceProfiler.h
src/entities/: Entity.h  EntityFactory.cpp  EntityFactory.h  EntityManager.cpp  EntityManager.h
src/graphics/: AnimationComponent.cpp  AnimationComponent.h  AnimationSystem.cpp  AnimationSystem.h  Camera.cpp  Camera.h  CameraSystem.cpp  CameraSystem.h  FrustumCuller.cpp  FrustumCuller.h  GraphicsFactory.cpp  IGraphicsAPI.h  MockGraphicsAPI.h  OpenGLAPI.cpp  OpenGLAPI.h  ShaderManager.cpp  ShaderManager.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h
src/input/: GamepadDevice.cpp  GamepadDevice.h  IInputDevice.h  InputManager.cpp  InputManager.h  KeyboardDevice.cpp  KeyboardDevice.h  MouseDevice.cpp  MouseDevice.h
src/physics/: CollisionDetection.cpp  CollisionDetection.h  CollisionShape.h  CollisionSystem.cpp  CollisionSystem.h  MovementSystem.cpp  MovementSystem.h  PhysicsCollidable.h  PhysicsComponent.h  SpatialPartitioning.cpp  SpatialPartitioning.h  TriggerComponent.h  TriggerSystem.cpp  TriggerSystem.h
src/platform/: IPlatform.h
src/resources/: AudioResource.cpp  AudioResource.h  GLFunctions.cpp  GLFunctions.h  Resource.h  ResourceManager.cpp  ResourceManager.h  TextureResource.cpp  TextureResource.h
src/save/: JsonSaveSerializer.cpp  JsonSaveSerializer.h  SaveIntegration.cpp  SaveIntegration.h  SaveLoadManager.cpp  SaveLoadManager.h  SaveManager.cpp  SaveManager.h  SystemStateSerializer.cpp  SystemStateSerializer.h
src/scene/: BattleScene.cpp  BattleScene.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/scripting/: IScriptEngine.h  LuaScriptEngine.cpp  LuaScriptEngine.h
src/systems/: CombatSystem.cpp  CombatSystem.h  QuestDialogueIntegration.cpp  QuestDialogueIntegration.h  QuestSystem.cpp  QuestSystem.h  QuestWorldIntegration.cpp  QuestWorldIntegration.h  ScriptSystem.cpp  ScriptSystem.h  System.cpp  System.h  SystemManager.cpp  SystemManager.h
src/tilemap/: MapLoader.cpp  MapLoader.h  Tile.h  TileLayer.cpp  TileLayer.h  Tilemap.cpp  Tilemap.h  TilemapRenderer.cpp  TilemapRenderer.h  Tileset.cpp  Tileset.h
src/tools/: AnimationEditor.cpp  AnimationEditor.h  DialogueEditor.cpp  DialogueEditor.h  MapEditor.cpp  MapEditor.h
src/ui/: CombatUI.cpp  CombatUI.h  DialogueUI.cpp  DialogueUI.h  GameHUD.cpp  GameHUD.h  MainMenuUI.cpp  MainMenuUI.h  QuestUI.cpp  QuestUI.h  SaveLoadUI.cpp  SaveLoadUI.h  UIRenderer.cpp  UIRenderer.h
src/utils/: Base64.h  XMLParser.h  Zlib.h
src/world/: Map.cpp  Map.h  MapObject.cpp  MapObject.h  WorldManager.cpp  WorldManager.h
test_results/: task_20_2_completion_report.md
test_saves_integration/: info_test.sav  integration_test.sav  slot_0.sav  slot_1.sav  slot_2.sav  slot_3.sav  slot_4.sav
web/: shell.html
